working on the navbar

--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,3 +1,7 @@
-<app-navbar></app-navbar>
+<div class="container">
+    <app-navbar></app-navbar>
+    <app-product-category-strip></app-product-category-strip>
 <app-supplement-card></app-supplement-card>
 <router-outlet></router-outlet>
+
+</div>
