--- a/angular-frontend/src/app/components/navbar/navbar.component.html
+++ b/angular-frontend/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar">
     <!-- Logo -->
     <div class="logo">
-      <img src="/images/logo.png" alt="Logo" />
+      <img src="/images/logo.jpg" alt="Logo" />
     </div>
   
     <!-- Search Bar (Desktop) -->
