--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -2,6 +2,7 @@
     <app-navbar></app-navbar>
     <app-product-category-strip></app-product-category-strip>
 <app-supplement-card></app-supplement-card>
+<app-product-search-card></app-product-search-card>
 <router-outlet></router-outlet>
 
 </div>
