fixed the navbar

--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="container">
+    <div class="navbar-container">
     <app-navbar></app-navbar>
     <app-product-category-strip></app-product-category-strip>
+    </div>
 <app-supplement-card></app-supplement-card>
-<app-product-search-card></app-product-search-card>
 <router-outlet></router-outlet>
 
 </div>
