--- a/angular-frontend/src/app/components/product-search-card/product-search-card.component.html
+++ b/angular-frontend/src/app/components/product-search-card/product-search-card.component.html
@@ -1,7 +1,7 @@
-<div class="supplement-card">
-    <img [src]="supplement.imageUrl" alt="{{ supplement.name }}" class="supplement-image" />
-    <div class="supplement-info">
-      <h2 class="supplement-name">{{ supplement.name }}</h2>
-      <p class="supplement-price">€{{ supplement.priceEuro }}</p>
-    </div>
+<div *ngFor="let supplement of supplements" class="supplement-card">
+  <img [src]="supplement.imageUrl" alt="{{ supplement.name }}" class="supplement-image" />
+  <div class="supplement-info">
+    <h2 class="supplement-name">{{ supplement.name }}</h2>
+    <p class="supplement-price">€{{ supplement.priceEuro }}</p>
   </div>
+</div>
