working on the chart

--- a/angular-frontend/src/app/app.component.html
+++ b/angular-frontend/src/app/app.component.html
@@ -4,6 +4,7 @@
     <app-product-category-strip></app-product-category-strip>
     </div>
 <app-supplement-card></app-supplement-card>
+<app-cart></app-cart>
 <router-outlet></router-outlet>
 
 </div>
