--- a/angular-frontend/src/app/components/navbar/navbar.component.scss
+++ b/angular-frontend/src/app/components/navbar/navbar.component.scss
@@ -150,6 +150,7 @@
     gap: 1rem;
 
     .icon-button {
+      position: relative;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -176,6 +177,20 @@
           color: #FF5722;
         }
       }
+    }
+    .counter {
+      position: absolute;
+      top: -5px;
+      right: -5px;
+      background-color: red;
+      color: white;
+      font-size: 12px;
+      font-weight: bold;
+      border-radius: 50%;
+      padding: 2px 6px;
+      min-width: 18px;
+      text-align: center;
+      line-height: 1.1;
     }
   }
   /* Hide mobile icon on large screens */
