--- a/angular-frontend/src/app/components/supplement-card/supplement-card.component.html
+++ b/angular-frontend/src/app/components/supplement-card/supplement-card.component.html
@@ -65,8 +65,17 @@
           <span>Add to Cart</span>
         </button>
       </div>
+      
     </div>
+
+    
   </div>
 </div>
+<div *ngIf="successMessageVisible" class="success-message">
+  ✅ Successfully added product
+</div>
+<!-- Success Message -->
+
+
 
 
