--- a/angular-frontend/src/styles.scss
+++ b/angular-frontend/src/styles.scss
@@ -1,5 +1,5 @@
 html {
-  font-family: Roboto,Poppins, BlinkMacSystemFont, "Segoe UI", Helvetica,
+  font-family: Poppins, BlinkMacSystemFont, "Segoe UI", Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
